# CFDVulkan

./: CMakeLists.txt  LICENSE  README.md  Timings.txt  boundary_val.cpp  boundary_val.hpp  cell.cpp  cell.hpp  datastructures.hpp  enums.hpp  gpu_images.cpp  gpu_images.h  gpu_pipelines.cpp  gpu_pipelines.h  grid.cpp  grid.hpp  helper.cpp  helper.hpp  init.cpp  init.hpp  main.cpp  mkdocs.yml  par.cpp  par.hpp  sor.cpp  sor.hpp  uvp.cpp  uvp.hpp  visual.cpp  visual.hpp  vk_utils.cpp  vk_utils.h
docs/: README.md
docs/Gitlab_CI/: docu_ci.md
docs/Parallelization/: MPI_Cart.md
docs/Setup/: 1_VM.md  2_Git.md
docs/Tools/PGM_Tool/: Debugging.md  Introduction.md
docs/Tools/VTK_Tools/: Compare_Tool.md  Merge_Tool.md  Tools.md
shader/: CMakeLists.txt  boundary_vals.comp  calculate_alpha.comp  calculate_dt.comp  calculate_fg.comp  calculate_rs.comp  calculate_sor.comp  calculate_species.comp  calculate_temp.comp  calculate_uv.comp  reset_sor.comp  structures.h
simulation_settings/: box.pgm  box_large.pgm  box_xlarge.pgm  channel.pgm  channel_obstacle.pgm  chimney_small.pgm  death_valley.pgm  death_valley_no_trees.pgm  fire_test_small.pgm  fluid_trap.pgm  geometry.pgm  indoor_fire.pgm  moving_lid.pgm  pgm_creator.c
tests/: CMakeLists.txt  catch_config.hpp  sample_test.cpp
tools/PGM_Tool/: app.py  index.html  pipeline.example.yml
tools/PGM_Tool/Docker/: Dockerfile
tools/PGM_Tool/misc/: README.md  convert_flask_template.sh
tools/PGM_Tool/static/css/: jexcel.css  main.css
tools/PGM_Tool/static/js/: init.js  jexcel.js  restore.js
tools/PGM_Tool/templates/: index_flask.html
tools/VTK_Tools/: CMakeLists.txt  Compare.cpp  FileIterator.cpp  FileIterator.hpp  Merge.cpp  Reader.cpp  Reader.hpp  cxxopts.hpp  helper.hpp
tools/VTK_Tools/Misc/Merged/: output_0.vtk
tools/VTK_Tools/Misc/VTK_Compare/: output.1.vtk
tools/VTK_Tools/Misc/VTK_Origin/: output.0.vtk
tools/VTK_Tools/tests/: CMakeLists.txt  merge.cpp
(+7 files in other folders)
